Fixed the header spacing issue all header lis are centered now

--- a/about-me-style.css
+++ b/about-me-style.css
@@ -46,6 +46,15 @@ a:visited {
     color: #eeefeb;
 }
 
+.header {
+    width: 100vw;
+}
+
+.header li {
+    width: 100px;
+    text-align: center;
+}
+
 .header ul {
     margin: 8px;
     padding: 8px;
